--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
 .App {
   text-align: center;
 }
